# webgpu-city

./: .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  build.rs  docker-compose.yml  index.html
src/: main.rs  shader.wgsl
