[package]
name = "webgpu-city"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
pollster = "0.4.0"
wgpu = "30.0.0"
winit = "0.30.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
