[package]
name = "webgpu-city"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
gltf = "1.4.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
wgpu = "30.0.0"
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.83", features = ["Location", "Response", "Window"] }
